--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,13 @@
     "bcryptjs": "^2.4.3",
     "better-sqlite3": "^11.8.1",
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "json2csv": "^6.0.0-alpha.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.0",
     "openai": "^4.83.0"
   }
